<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degradado"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/registro_campos"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/txtCorreo"
            android:textColor="@color/colorGris"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/registro_campos"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/txtContrasena"
            android:textColor="@color/colorGris"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="20dp"
            android:text="@string/txtOlvido"
            android:textColor="@color/colorAquaClarito"
            android:textSize="18sp"
            app:fontFamily="@font/fresca" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="90dp"
            android:background="@drawable/continue_correo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:text="@string/txtSignIn"
                android:textColor="#ffff"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>