<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpTwo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_marginLeft="110dp"
                android:layout_marginBottom="20dp"
                android:text="@string/txtSignUp"
                android:textColor="#ffff"
                android:textSize="24sp"
                app:fontFamily="@font/fredoka_one" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="@string/txtN2"
                android:textColor="#ffff"
                android:textSize="24sp"
                app:fontFamily="@font/fredoka_one"
                android:paddingEnd="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/borde_scroll"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:background="@drawable/borde_scroll"
                tools:layout_editor_absoluteX="-2dp"
                tools:layout_editor_absoluteY="112dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="30dp"
                            android:layout_marginRight="30dp"
                            android:text="@string/txtEstado"
                            android:textColor="#ffff"
                            android:textSize="22sp"
                            app:fontFamily="@font/fresca" />

                        <Spinner
                            android:id="@+id/spinner2"
                            android:layout_width="300dp"
                            android:layout_height="55dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="50dp"
                            android:background="@drawable/registro_campos"
                            android:entries="@array/estadoCivil"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="60dp"
                            android:layout_marginRight="60dp"
                            android:text="@string/txtCelular"
                            android:textColor="#ffff"
                            android:textSize="22sp"
                            app:fontFamily="@font/fresca" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/txtCelular"
                                android:layout_width="70dp"
                                android:layout_height="55dp"
                                android:layout_marginStart="50dp"
                                android:layout_marginLeft="50dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginRight="10dp"
                                android:background="@drawable/registro_campos"
                                android:ems="10"
                                android:importantForAutofill="no"
                                android:inputType="number"
                                android:maxLength="4"
                                android:paddingStart="10dp"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                tools:ignore="LabelFor"
                                tools:targetApi="o" />

                            <EditText
                                android:id="@+id/txtCelular2"
                                android:layout_width="220dp"
                                android:layout_height="55dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="50dp"
                                android:layout_marginRight="50dp"
                                android:background="@drawable/registro_campos"
                                android:ems="10"
                                android:importantForAutofill="no"
                                android:inputType="number"
                                android:maxLength="10"
                                android:paddingStart="10dp"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                tools:ignore="LabelFor"
                                tools:targetApi="o" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="30dp"
                            android:layout_marginRight="30dp"
                            android:text="@string/txtDireccion"
                            android:textColor="#ffff"
                            android:textSize="22sp"
                            app:fontFamily="@font/fresca" />

                        <EditText
                            android:id="@+id/txtDireccion"
                            android:layout_width="300dp"
                            android:layout_height="55dp"
                            android:layout_marginStart="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/registro_campos"
                            android:ems="10"
                            android:importantForAutofill="no"
                            android:inputType="textPersonName"
                            android:maxLength="50"
                            android:paddingStart="10dp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            tools:ignore="LabelFor"
                            tools:targetApi="o" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtContraseña"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="30dp"
                            android:layout_marginRight="30dp"
                            android:text="@string/txtContrasena"
                            android:textColor="#ffff"
                            android:textSize="22sp"
                            app:fontFamily="@font/fresca" />

                        <EditText
                            android:id="@+id/editText3"
                            android:layout_width="300dp"
                            android:layout_height="55dp"
                            android:layout_marginStart="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/registro_campos"
                            android:ems="10"
                            android:hint="**********"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            tools:ignore="LabelFor"
                            tools:targetApi="o" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/txtTipPswd"
                            android:textColor="#ffff" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtContraseña2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="30dp"
                            android:layout_marginRight="30dp"
                            android:text="@string/txtContrasena2"
                            android:textColor="#ffff"
                            android:textSize="22sp"
                            app:fontFamily="@font/fresca" />

                        <EditText
                            android:id="@+id/editText4"
                            android:layout_width="300dp"
                            android:layout_height="55dp"
                            android:layout_marginStart="50dp"
                            android:layout_marginLeft="50dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/registro_campos"
                            android:ems="10"
                            android:hint="**********"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            tools:ignore="LabelFor"
                            tools:targetApi="o" />

                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/chkbTerminos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="40dp"
                        android:layout_weight="1"
                        android:text="@string/txtTerminos"
                        android:textColor="#ffff"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/chkbNoticias"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/txtNoticias"
                        android:textColor="#ffff"
                        android:textSize="18sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/btnAnterior"
                            android:layout_width="170dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="50dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/continue_correo"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="91dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="50dp"
                                android:layout_marginLeft="50dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="50dp"
                                android:layout_marginRight="50dp"
                                android:text="@string/txtAnterior"
                                android:textColor="#ffff"
                                android:textSize="22sp"
                                app:fontFamily="@font/fresca" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/btnCrear"
                            android:layout_width="170dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="50dp"
                            android:layout_marginEnd="30dp"
                            android:layout_marginRight="30dp"
                            android:background="@drawable/continue_correo"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="40dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginRight="40dp"
                                android:gravity="center"
                                android:text="@string/txtCrear"
                                android:textColor="#ffff"
                                android:textSize="22sp"
                                app:fontFamily="@font/fresca" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>